--- a/src/scss/_display.scss
+++ b/src/scss/_display.scss
@@ -38,12 +38,16 @@ header{
       }
     }
     h1:hover{
-      transform: scale(.9);
+      transform: scale(.95);
     }
-    a.about-button{
+    a:active h1{
+      transform: scale(1);
+    }
+  }
+}
+
+  input[type="reset"], a.about-button{
       position: fixed;
-      right: 30px;
-      top: 30px;
       color: #fff;
       text-decoration: none;
       display: block;
@@ -55,17 +59,43 @@ header{
       border-radius: 30px;
       font-size: 25px;
       transition: all .2s ease;
+      z-index: 10000;
+      padding: 5px;
       &:hover{
         transform: scale(.9);
       }
-      @media (max-width: 768px) {
-        top: 10px;
-        right: 10px;
+      &:active{
+        transform: scale(1.1);
       }
     }
 
-  }
-}
+    // Reset
+    input[type="reset"]{
+      left: 30px;
+      top: 30px;
+      font-style: normal;
+      font-family: Helvetica;
+      font-size: 23px;
+      -webkit-appearance: none;
+      border: none;
+      padding: 0;
+      cursor: pointer;
+      @media (max-width: 768px) {
+        top: 8px;
+        left: 10px;
+      }
+    }
+
+    // About
+    a.about-button{
+      right: 30px;
+      top: 30px;
+      @media (max-width: 768px) {
+        top: 8px;
+        right: 10px;
+        padding: 2px;
+      }
+    }
 
 p{
   font-size: 30px;
