Removed hydrate and combined pushups and jumping jacks into activity.

--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -1,7 +1,11 @@
 form{
   // Typography
   text-transform: uppercase;
-
+  max-width: 480px;
+  margin: 0 auto;
+  @media (max-width: 480px) {
+    max-width: 320px;
+  }
   label{
     color: #1F3E77;
     letter-spacing: 3px;
