--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,13 @@ p {
 
 form {
   text-transform: uppercase;
+  max-width: 480px;
+  margin: 0 auto;
+}
+@media (max-width: 480px) {
+  form {
+    max-width: 320px;
+  }
 }
 form label {
   color: #1F3E77;
