--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ header nav a:active h1 {
           transform: scale(1);
 }
 
-input[type="reset"], a.about-button {
+a.about-button {
   position: fixed;
   color: #fff;
   text-decoration: none;
@@ -136,42 +136,24 @@ input[type="reset"], a.about-button {
   z-index: 10000;
   padding: 5px;
 }
-input[type="reset"]:hover, a.about-button:hover {
+a.about-button:hover {
   -webkit-transform: scale(0.9);
       -ms-transform: scale(0.9);
           transform: scale(0.9);
 }
-input[type="reset"]:active, a.about-button:active {
+a.about-button:active {
   -webkit-transform: scale(1.1);
       -ms-transform: scale(1.1);
           transform: scale(1.1);
 }
 
-input[type="reset"] {
-  left: 30px;
-  top: 30px;
-  font-style: normal;
-  font-family: Helvetica;
-  font-size: 23px;
-  -webkit-appearance: none;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-}
-@media (max-width: 768px) {
-  input[type="reset"] {
-    top: 8px;
-    left: 10px;
-  }
-}
-
 a.about-button {
   right: 30px;
-  top: 30px;
+  bottom: 30px;
 }
 @media (max-width: 768px) {
   a.about-button {
-    top: 8px;
+    bottom: 8px;
     right: 10px;
     padding: 2px;
   }
