--- a/src/scss/_display.scss
+++ b/src/scss/_display.scss
@@ -46,7 +46,7 @@ header{
   }
 }
 
-  input[type="reset"], a.about-button{
+  a.about-button{
       position: fixed;
       color: #fff;
       text-decoration: none;
@@ -69,29 +69,12 @@ header{
       }
     }
 
-    // Reset
-    input[type="reset"]{
-      left: 30px;
-      top: 30px;
-      font-style: normal;
-      font-family: Helvetica;
-      font-size: 23px;
-      -webkit-appearance: none;
-      border: none;
-      padding: 0;
-      cursor: pointer;
-      @media (max-width: 768px) {
-        top: 8px;
-        left: 10px;
-      }
-    }
-
     // About
     a.about-button{
       right: 30px;
-      top: 30px;
+      bottom: 30px;
       @media (max-width: 768px) {
-        top: 8px;
+        bottom: 8px;
         right: 10px;
         padding: 2px;
       }
