Back to the basics, baby

--- a/src/scss/_display.scss
+++ b/src/scss/_display.scss
@@ -1,44 +1,31 @@
 // Body
 body{
-  background: url('../img/bg.png') no-repeat center center;
-  background-size: cover;
-  background-attachment: fixed;
 }
 
 // Typography
 h1, h2, h3, li, p, a, textarea, input{
   font-family: "brandon-grotesque",sans-serif;
   font-style: italic;
-  font-weight: 700;
 }
 
 // Header
 header{
   position: fixed;
   width: 100%;
-  height: 100px;
-  background: url('../img/header-bg.png') no-repeat center center;
-  background-size: cover;
+  height: 50px;
   z-index: 1000;
   top: 0;
   @media (max-width: 768px) {
     height: 50px;
   }
   nav{
-
     h1{
       text-align: center;
-      background: url('../img/logo.svg') no-repeat center center;
-      height: 100px;
-      text-indent: -9999px;
+      height: 50px;
       transition: all .2s ease;
-      @media (max-width: 768px) {
-        background-size: 50% 50%;
-        height: 50px;
-      }
-    }
-    h1:hover{
-      transform: scale(.95);
+      font-size: 40px;
+      line-height: 50px;
+      letter-spacing: 4px;
     }
     a:active h1{
       transform: scale(1);
@@ -46,20 +33,19 @@ header{
   }
 }
 
-  a.about-button{
+  a.top-button, a.about-button{
       position: fixed;
       color: #fff;
       text-decoration: none;
-      display: block;
       width: 30px;
       height: 30px;
       text-align: center;
       line-height: 30px;
-      background: #1F3E77;
+      background: #222;
       border-radius: 30px;
       font-size: 25px;
       transition: all .2s ease;
-      z-index: 10000;
+      z-index: 100;
       padding: 5px;
       &:hover{
         transform: scale(.9);
@@ -70,19 +56,31 @@ header{
     }
 
     // About
-    a.about-button{
+    a.top-button, a.about-button{
       right: 30px;
       bottom: 30px;
+      font-style: normal;
       @media (max-width: 768px) {
         bottom: 8px;
         right: 10px;
         padding: 2px;
       }
     }
+    a.about-button{
+      display: block;
+      z-index: 500;
+    }
+    a.top-buttton{
+      display: none;
+    }
 
 p{
-  font-size: 30px;
+  font-size: 25px;
   line-height: 40px;
   padding: 30px;
-  color: #fff;
+  color: #222;
+  text-align: center;
 }
+
+::-moz-selection { background: transparent; }
+::selection { background: transparent; }
