--- a/css/style.css
+++ b/css/style.css
@@ -68,24 +68,15 @@ section article {
   margin: 50px auto 0 auto;
 }
 
-body {
-  background: url("../img/bg.png") no-repeat center center;
-  background-size: cover;
-  background-attachment: fixed;
-}
-
 h1, h2, h3, li, p, a, textarea, input {
   font-family: "brandon-grotesque",sans-serif;
   font-style: italic;
-  font-weight: 700;
 }
 
 header {
   position: fixed;
   width: 100%;
-  height: 100px;
-  background: url("../img/header-bg.png") no-repeat center center;
-  background-size: cover;
+  height: 50px;
   z-index: 1000;
   top: 0;
 }
@@ -96,22 +87,12 @@ header {
 }
 header nav h1 {
   text-align: center;
-  background: url("../img/logo.svg") no-repeat center center;
-  height: 100px;
-  text-indent: -9999px;
+  height: 50px;
   -webkit-transition: all .2s ease;
           transition: all .2s ease;
-}
-@media (max-width: 768px) {
-  header nav h1 {
-    background-size: 50% 50%;
-    height: 50px;
-  }
-}
-header nav h1:hover {
-  -webkit-transform: scale(0.95);
-      -ms-transform: scale(0.95);
-          transform: scale(0.95);
+  font-size: 40px;
+  line-height: 50px;
+  letter-spacing: 4px;
 }
 header nav a:active h1 {
   -webkit-transform: scale(1);
@@ -119,56 +100,74 @@ header nav a:active h1 {
           transform: scale(1);
 }
 
-a.about-button {
+a.top-button, a.about-button {
   position: fixed;
   color: #fff;
   text-decoration: none;
-  display: block;
   width: 30px;
   height: 30px;
   text-align: center;
   line-height: 30px;
-  background: #1F3E77;
+  background: #222;
   border-radius: 30px;
   font-size: 25px;
   -webkit-transition: all .2s ease;
           transition: all .2s ease;
-  z-index: 10000;
+  z-index: 100;
   padding: 5px;
 }
-a.about-button:hover {
+a.top-button:hover, a.about-button:hover {
   -webkit-transform: scale(0.9);
       -ms-transform: scale(0.9);
           transform: scale(0.9);
 }
-a.about-button:active {
+a.top-button:active, a.about-button:active {
   -webkit-transform: scale(1.1);
       -ms-transform: scale(1.1);
           transform: scale(1.1);
 }
 
-a.about-button {
+a.top-button, a.about-button {
   right: 30px;
   bottom: 30px;
+  font-style: normal;
 }
 @media (max-width: 768px) {
-  a.about-button {
+  a.top-button, a.about-button {
     bottom: 8px;
     right: 10px;
     padding: 2px;
   }
 }
 
+a.about-button {
+  display: block;
+  z-index: 500;
+}
+
+a.top-buttton {
+  display: none;
+}
+
 p {
-  font-size: 30px;
+  font-size: 25px;
   line-height: 40px;
   padding: 30px;
-  color: #fff;
+  color: #222;
+  text-align: center;
+}
+
+::-moz-selection {
+  background: transparent;
+}
+
+::selection {
+  background: transparent;
 }
 
 form {
   text-transform: uppercase;
-  max-width: 480px;
+  max-width: 500px;
   margin: 0 auto;
 }
 @media (max-width: 480px) {
@@ -177,7 +176,7 @@ form {
   }
 }
 form label {
-  color: #1F3E77;
+  color: #000;
   letter-spacing: 3px;
 }
 form ul {
@@ -197,33 +196,26 @@ form ul li input[type=checkbox] {
   display: none;
 }
 form ul li input[type=checkbox] + label {
+  line-height: 20px;
   cursor: pointer;
   display: inline-block;
-  width: 130px;
-  height: 75px;
+  width: 120px;
+  height: 120px;
   border-radius: 300px;
-  padding-top: 55px;
+  line-height: 120px;
   vertical-align: middle;
-  background: #50E3C2;
-  box-shadow: 2px 2px 0 1px #1F3E77;
+  background: #ccc;
+  border: 5px solid transparent;
   -webkit-transition: all .2s ease;
           transition: all .2s ease;
 }
 form ul li input[type=checkbox] + label:hover {
-  -webkit-transform: scale(0.9);
-      -ms-transform: scale(0.9);
-          transform: scale(0.9);
-  color: #1F3E77;
+  color: #fff;
 }
 form ul li input[type=checkbox]:checked + label {
-  -webkit-transform: scale(0.5);
-      -ms-transform: scale(0.5);
-          transform: scale(0.5);
-  color: transparent;
+  border: 5px solid #666;
 }
 form ul li input[type=checkbox]:checked + label:hover {
-  -webkit-transform: scale(0.6);
-      -ms-transform: scale(0.6);
-          transform: scale(0.6);
-  color: #1F3E77;
+  border: 5px solid #999;
+  color: #fff;
 }
