--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -1,13 +1,13 @@
 form{
   // Typography
   text-transform: uppercase;
-  max-width: 480px;
+  max-width: 500px;
   margin: 0 auto;
   @media (max-width: 480px) {
     max-width: 320px;
   }
   label{
-    color: #1F3E77;
+    color: #000;
     letter-spacing: 3px;
   }
 
@@ -28,28 +28,28 @@ form{
       display: none;
     }
     input[type=checkbox] + label{
+      line-height: 20px;
       cursor: pointer;
       display: inline-block;
-      width: 130px;
-      height: 75px;
+      width: 120px;
+      height: 120px;
       border-radius: 300px;
-      padding-top: 55px;
+      line-height: 120px;
       vertical-align: middle;
-
-      background: #50E3C2;
-      box-shadow: 2px 2px 0 1px #1F3E77;
+      background: #ccc;
+      border: 5px solid transparent;
       transition: all .2s ease;
       &:hover{
-        transform: scale(.9);
-        color: #1F3E77;
+        // transform: scale(.9);
+        color: #fff;
       }
     }
     input[type=checkbox]:checked + label{
-      transform: scale(.5);
-      color: transparent;
+      // transform: scale(.8);
+      border: 5px solid #666;
       &:hover{
-        transform: scale(.6);
-        color: #1F3E77;
+        border: 5px solid #999;
+        color: #fff;
       }
     }
   }
