--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,10 @@ header nav h1 {
   line-height: 50px;
   letter-spacing: 4px;
 }
+header nav h1 a {
+  text-decoration: line-through;
+  color: #222;
+}
 header nav a:active h1 {
   -webkit-transform: scale(1);
       -ms-transform: scale(1);
@@ -204,18 +208,15 @@ form ul li input[type=checkbox] + label {
   border-radius: 300px;
   line-height: 120px;
   vertical-align: middle;
-  background: #ccc;
+  background: #222;
   border: 5px solid transparent;
   -webkit-transition: all .2s ease;
           transition: all .2s ease;
+  color: #fff;
 }
 form ul li input[type=checkbox] + label:hover {
-  color: #fff;
+  background: #444;
 }
 form ul li input[type=checkbox]:checked + label {
-  border: 5px solid #666;
-}
-form ul li input[type=checkbox]:checked + label:hover {
-  border: 5px solid #999;
-  color: #fff;
+  border: 5px solid #50E3C2;
 }
