--- a/src/scss/_display.scss
+++ b/src/scss/_display.scss
@@ -27,6 +27,8 @@ header{
       font-size: 40px;
       line-height: 50px;
       letter-spacing: 4px;
+      text-indent: -9999px;
+      background: url(../img/logo.svg) no-repeat center center;
       a{
         text-decoration: line-through;
         color: #222;
