--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,8 @@ header nav h1 {
   font-size: 40px;
   line-height: 50px;
   letter-spacing: 4px;
+  text-indent: -9999px;
+  background: url(../img/logo.svg) no-repeat center center;
 }
 header nav h1 a {
   text-decoration: line-through;
