--- a/css/style.css
+++ b/css/style.css
@@ -68,9 +68,15 @@ section article {
   margin: 50px auto 0 auto;
 }
 
+body {
+  background-image: -webkit-linear-gradient(224deg, #9588F3 35%, #50E3C2 100%);
+  background-image: linear-gradient(226deg, #9588F3 35%, #50E3C2 100%);
+}
+
 h1, h2, h3, li, p, a, textarea, input {
   font-family: "brandon-grotesque",sans-serif;
   font-style: italic;
+  color: #fff;
 }
 
 header {
@@ -114,9 +120,9 @@ a.top-button, a.about-button {
   height: 30px;
   text-align: center;
   line-height: 30px;
-  background: #222;
+  border: 2px solid #fff;
   border-radius: 30px;
-  font-size: 25px;
+  font-size: 30px;
   -webkit-transition: all .2s ease;
           transition: all .2s ease;
   z-index: 100;
@@ -151,15 +157,10 @@ a.about-button {
   z-index: 500;
 }
 
-a.top-buttton {
-  display: none;
-}
-
 p {
   font-size: 25px;
   line-height: 40px;
   padding: 30px;
-  color: #222;
   text-align: center;
 }
 
@@ -210,14 +211,13 @@ form ul li input[type=checkbox] + label {
   border-radius: 300px;
   line-height: 120px;
   vertical-align: middle;
-  background: #222;
-  border: 5px solid transparent;
+  border: 5px solid #fff;
   -webkit-transition: all .2s ease;
           transition: all .2s ease;
   color: #fff;
 }
 form ul li input[type=checkbox] + label:hover {
-  background: #444;
+  background: rgba(255, 255, 255, 0.175);
 }
 form ul li input[type=checkbox]:checked + label {
   border: 5px solid #50E3C2;
