--- a/src/scss/_display.scss
+++ b/src/scss/_display.scss
@@ -1,12 +1,13 @@
 // Body
 body{
-
+  background-image: linear-gradient(226deg, #9588F3 35%, #50E3C2 100%);
 }
 
 // Typography
 h1, h2, h3, li, p, a, textarea, input{
   font-family: "brandon-grotesque",sans-serif;
   font-style: italic;
+  color: #fff;
 }
 
 // Header
@@ -48,9 +49,9 @@ header{
       height: 30px;
       text-align: center;
       line-height: 30px;
-      background: #222;
+      border: 2px solid #fff;
       border-radius: 30px;
-      font-size: 25px;
+      font-size: 30px;
       transition: all .2s ease;
       z-index: 100;
       padding: 5px;
@@ -77,15 +78,10 @@ header{
       display: block;
       z-index: 500;
     }
-    a.top-buttton{
-      display: none;
-    }
-
 p{
   font-size: 25px;
   line-height: 40px;
   padding: 30px;
-  color: #222;
   text-align: center;
 }
 
