--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,6 @@ a.top-button, a.about-button {
   height: 30px;
   text-align: center;
   line-height: 30px;
-  border: 2px solid #fff;
   border-radius: 30px;
   font-size: 30px;
   -webkit-transition: all .2s ease;
@@ -140,15 +139,19 @@ a.top-button:active, a.about-button:active {
 }
 
 a.top-button, a.about-button {
-  right: 30px;
-  bottom: 30px;
+  right: 15px;
+  bottom: 15px;
   font-style: normal;
 }
 @media (max-width: 768px) {
   a.top-button, a.about-button {
-    bottom: 8px;
-    right: 10px;
+    bottom: 5px;
+    right: 5px;
+    font-size: 25px;
     padding: 2px;
+    width: 25px;
+    line-height: 25px;
+    height: 25px;
   }
 }
 
