--- a/src/scss/_display.scss
+++ b/src/scss/_display.scss
@@ -49,7 +49,6 @@ header{
       height: 30px;
       text-align: center;
       line-height: 30px;
-      border: 2px solid #fff;
       border-radius: 30px;
       font-size: 30px;
       transition: all .2s ease;
@@ -65,13 +64,17 @@ header{
 
     // About
     a.top-button, a.about-button{
-      right: 30px;
-      bottom: 30px;
+      right: 15px;
+      bottom: 15px;
       font-style: normal;
       @media (max-width: 768px) {
-        bottom: 8px;
-        right: 10px;
+        bottom: 5px;
+        right: 5px;
+        font-size: 25px;
         padding: 2px;
+        width: 25px;
+        line-height: 25px;
+        height: 25px;
       }
     }
     a.about-button{
